<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="callculate_bmi">Callculate</string>
    <string name="weight_title">Weight</string>
    <string name="weight_hint">Enter your weight</string>
    <string name="height_title">Height</string>
    <string name="height_hint">Enter your height</string>
    <string name="bmi_result">Your Bmi</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normalweight">Normalweight</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese">Obese</string>
</resources>
